Added pdf version of notebook, made small fixes

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -27,7 +27,7 @@
     "\n",
     "The dataset in this project was taken from [this page](https://www.zillow.com/research/data/) and stored on [this github repository](https://github.com/learn-co-curriculum/dsc-phase-4-choosing-a-dataset/tree/main/time-series) as \"zillow_data.csv.\"\n",
     "\n",
-    "After importing and adjusting the dataset so it could be used for modeling, it contained 265 months of data for 13,684 zipcodes, totalling to 3.6 million rows of data.\n",
+    "After importing and adjusting the dataset so it could be used for modeling, it contained 265 months of data from April 1996 – April 2018 for 13,684 zipcodes, totalling 3.6 million rows of data.\n",
     "\n",
     "We condensed the dataset down to just houses in Michigan, and then we condensed it further to houses sold during and after 2012. We chose this time period because the housing market came out of the decline caused by the 2008 housing market crash. We didn't want data from a rare, unlikely event to impact our models.\n",
     "\n",
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "0aab657a",
    "metadata": {},
    "outputs": [],
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "c8a86d83",
    "metadata": {},
    "outputs": [],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "3e201f78",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "708d0359",
    "metadata": {},
    "outputs": [
@@ -384,7 +384,7 @@
        "[5 rows x 272 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "cdfdc981",
    "metadata": {},
    "outputs": [],
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "a28739eb",
    "metadata": {},
    "outputs": [],
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "457b8e93",
    "metadata": {},
    "outputs": [],
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "9e54bb13",
    "metadata": {},
    "outputs": [
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "e3a320a1",
    "metadata": {},
    "outputs": [],
@@ -490,7 +490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "0d5e3341",
    "metadata": {},
    "outputs": [
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "feb30071",
    "metadata": {},
    "outputs": [
@@ -542,7 +542,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "ddbb358f",
    "metadata": {},
    "outputs": [
@@ -563,7 +563,7 @@
        "13684"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "ce6f48ec",
    "metadata": {},
    "outputs": [
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "4622749d",
    "metadata": {},
    "outputs": [
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "59360033",
    "metadata": {},
    "outputs": [
@@ -679,7 +679,7 @@
      "output_type": "stream",
      "text": [
       "Zipcode #453/453 done.\n",
-      "Execution time: 1.5769288539886475 seconds\n"
+      "Execution time: 1.691235065460205 seconds\n"
      ]
     }
    ],
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "42215f3b",
    "metadata": {},
    "outputs": [],
@@ -767,7 +767,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "fd87fd3b",
    "metadata": {},
    "outputs": [],
@@ -780,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "da1b4539",
    "metadata": {},
    "outputs": [
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "f90cde28",
    "metadata": {},
    "outputs": [
@@ -857,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "98200b3a",
    "metadata": {},
    "outputs": [
@@ -886,12 +886,12 @@
    "source": [
     "# Differencing the series\n",
     "\n",
-    "After differencing the aggregated series, the number of significant lags went down from 7 to 1. These suggest that our first model should have one AR terms, one MA term, and one difference."
+    "After differencing the aggregated series, the number of significant lags went down from 7 to 1. These suggest that our first model should have one AR term, one MA term, and one difference."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "id": "b6b9c925",
    "metadata": {},
    "outputs": [
@@ -924,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "id": "e132c44d",
    "metadata": {
     "scrolled": false
@@ -935,7 +935,7 @@
      "output_type": "stream",
      "text": [
       "Zipcode #453/453 done.\n",
-      "Execution time: 15.075210809707642 seconds\n"
+      "Execution time: 17.61515974998474 seconds\n"
      ]
     }
    ],
@@ -1002,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "id": "248c86fa",
    "metadata": {},
    "outputs": [],
@@ -1022,7 +1022,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "id": "d101644f",
    "metadata": {},
    "outputs": [],
@@ -1035,7 +1035,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "5710ddd8",
    "metadata": {},
    "outputs": [
@@ -1068,7 +1068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "id": "57022cc5",
    "metadata": {},
    "outputs": [
@@ -1111,7 +1111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "id": "281df095",
    "metadata": {
     "scrolled": false
@@ -1123,7 +1123,7 @@
      "text": [
       "Zipcode: #453/453\n",
       "Rolling model #16/16 done.\n",
-      "Execution time: 245.313138961792 seconds\n"
+      "Execution time: 258.36543107032776 seconds\n"
      ]
     }
    ],
@@ -1206,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 29,
    "id": "75c15f06",
    "metadata": {},
    "outputs": [],
@@ -1226,7 +1226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 30,
    "id": "99313cc3",
    "metadata": {},
    "outputs": [],
@@ -1239,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 31,
    "id": "93936d30",
    "metadata": {},
    "outputs": [
@@ -1272,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 32,
    "id": "b87cae36",
    "metadata": {},
    "outputs": [
@@ -1313,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 33,
    "id": "f0bca13e",
    "metadata": {
     "scrolled": false
@@ -1325,7 +1325,7 @@
      "text": [
       "Zipcode: #453/453\n",
       "Rolling model #3/3 done.\n",
-      "Execution time: 53.19858694076538 seconds\n"
+      "Execution time: 50.142858028411865 seconds\n"
      ]
     }
    ],
@@ -1367,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 34,
    "id": "af695797",
    "metadata": {},
    "outputs": [],
@@ -1383,7 +1383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 35,
    "id": "981c1b8a",
    "metadata": {},
    "outputs": [
@@ -1420,7 +1420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "id": "7593d5fb",
    "metadata": {},
    "outputs": [],
@@ -1437,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "id": "e9c829a7",
    "metadata": {},
    "outputs": [
@@ -1573,7 +1573,7 @@
        "151                141400.0          144761.735864  2.377  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1595,7 +1595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 38,
    "id": "65443a2f",
    "metadata": {},
    "outputs": [
@@ -1737,7 +1737,7 @@
        "448                 76400.0           76647.341672  0.324   51.585439  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1764,7 +1764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 39,
    "id": "6558ee82",
    "metadata": {},
    "outputs": [
@@ -1798,7 +1798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 40,
    "id": "2397866a",
    "metadata": {
     "scrolled": false
@@ -1843,7 +1843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 41,
    "id": "c8696229",
    "metadata": {},
    "outputs": [],
@@ -1853,7 +1853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 42,
    "id": "fdd9cab2",
    "metadata": {},
    "outputs": [
@@ -1995,7 +1995,7 @@
        "38                  97600.0           99873.927678  2.330    1.521293  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2006,7 +2006,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 43,
    "id": "1abfb44d",
    "metadata": {
     "scrolled": false
@@ -2075,7 +2075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "id": "72e3b924",
    "metadata": {},
    "outputs": [],
@@ -2099,7 +2099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "id": "e4bf9b3c",
    "metadata": {},
    "outputs": [],
@@ -2123,7 +2123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 46,
    "id": "1c99d09c",
    "metadata": {},
    "outputs": [
@@ -2141,7 +2141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 47,
    "id": "4c0ee288",
    "metadata": {},
    "outputs": [
@@ -2163,7 +2163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 48,
    "id": "4bafc29e",
    "metadata": {},
    "outputs": [
@@ -2209,7 +2209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 49,
    "id": "3a4215cb",
    "metadata": {},
    "outputs": [
@@ -2333,7 +2333,7 @@
        "48239                  97600.0          99873.927678  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
